--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/fdfd"
+        android:icon="@drawable/ikonka"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/fdfd"
+        android:roundIcon="@drawable/ikonka"
         android:supportsRtl="true"
         android:theme="@style/Theme.DragonRaise">
+        <activity android:name=".Puzzle"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<activity android:name=".Game" />
+        <activity android:name=".Game" />
         <activity android:name=".Rules" />
         <activity android:name=".User" />
     </application>
